--- a/views/layouts/logged-out.handlebars
+++ b/views/layouts/logged-out.handlebars
@@ -39,8 +39,8 @@
         {{> clientSideCodeErrorReporter }}
     </head>
 
-    <body class="intro-body">
-        <main class="container intro-container">
+    <body class="logged-out-body">
+        <main class="container logged-out-container">
             {{{body}}}
         </main>
     </body>
