--- a/views/partials/communitysidebar.handlebars
+++ b/views/partials/communitysidebar.handlebars
@@ -40,7 +40,7 @@
         {{#eq communityData.settings.joinType "approval"}}
           {{#if hasRequested}}
           </ul>
-            <div class="alert alert-secondary text-center">
+            <div class="message text-center">
               You have asked to join this community. You will be notified if your request is approved.
             </div>
           {{else}}
@@ -75,7 +75,7 @@
             {{#eq communityData.settings.joinType "approval"}}
               {{#if hasRequested}}
               </ul>
-                <div class="alert alert-secondary text-center">
+                <div class="message text-center">
                   You have asked to join this community. You will be notified if your request is approved.
                 </div>
               {{else}}
