--- a/views/partials/votes.handlebars
+++ b/views/partials/votes.handlebars
@@ -59,7 +59,7 @@
                     <img class="post-single-image" src="/images/communities/staging/{{this.proposedValue}}"/>
                 </div>
             {{else}}
-                <div class="alert alert-light text-dark proposal-box">{{{this.parsedProposedValue}}}</div>
+                <div class="message proposal-box">{{{this.parsedProposedValue}}}</div>
             {{/eq}}
         {{/eq}}
         <div class="vote-display mb-3">
