--- a/views/user.handlebars
+++ b/views/user.handlebars
@@ -20,7 +20,7 @@
   		{{> newpostform }}
     {{/and}}
     {{#unless loggedIn}}
-    <div class="alert alert-success w-100 text-center" style="font-size:1.4em;">
+    <div class="message w-100 text-center" style="font-size:1.4em;">
       <strong>@{{ profileData.username }}</strong> is on <strong>sweet</strong>, a lightweight social network built on trust and community. <a class="alert-link" href="/signup">Sign up now</a>!
     </div>
     {{/unless}}
