--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -1,21 +1,23 @@
-<div class="userForm">
+<div class="row">
+    <div class="col-12">
+        <h1 class="centered-title"><a href="/">sweet <img class="bee-logo" src="/icons/bee-color.svg" /></a></h1>
 
-    <h3 class="text-center mb-4">Log in</h3>
+        {{> message }}
 
-    {{> message }}
+        <form  class="logged-out-form" action="/login" method="post">
 
-    <!-- LOGIN FORM -->
-    <form action="/login" method="post">
-        <div class="form-group">
-            <input type="text" class="form-control" name="email" placeholder="Email">
-        </div>
-        <div class="form-group">
-            <input type="password" class="form-control" name="password" placeholder="Password">
-        </div>
+            <div class="form-group">
+                <input type="text" name="email" placeholder="Email" {{#if sessionFlash.email}}value="{{ sessionFlash.email }}"{{/if}}>
+                <label for="email">Email</label>
+            </div>
+            <div class="form-group">
+                <input type="password" name="password" placeholder="Password">
+                <label for="password">Password</label>
+            </div>
 
-        <button class="btn btn-secondary btn-block" type="submit">Log in</button>
-    </form>
+            <button type="submit">Log in</button>
+            <a class="help-link" href="/forgot-password">Forgot password?</a>
 
-    <a class="d-block mt-3" href="/forgot-password">Forgot password?</a>
-
+        </form>
+    </div>
 </div>
