--- a/views/partials/filemessage.handlebars
+++ b/views/partials/filemessage.handlebars
@@ -9,7 +9,7 @@
           </button>
         </div>
         <div class="modal-body">
-          <div class="alert alert-{{ sessionFlash.type }}">
+          <div class="message alert">
             {{{ sessionFlash.message }}}
           </div>
         </div>
