--- a/views/resend-token.handlebars
+++ b/views/resend-token.handlebars
@@ -1,19 +1,20 @@
-<div class="userForm">
+<div class="row">
+    <div class="col-12">
+        <h1 class="centered-title"><a href="/">sweet <img class="bee-logo" src="/icons/bee-color.svg" /></a></h1>
 
-    <h3 class="text-center mb-4">Resend token</h3>
+        {{> message }}
 
-    {{> message }}
+        <form class="logged-out-form" action="/resend-token" method="post">
+          <p class="sidebar-text">
+            Please enter the email address you used when signing up below:
+          </p>
+          <div class="form-group">
+              <input type="email" name="email" placeholder="Email" value="{{sessionFlash.email}}">
+              <label for="email">Email</label>
+          </div>
 
-    <!-- LOGIN FORM -->
-    <form action="/resend-token" method="post">
-      <p class="form-text">
-        Please enter the email address you used when signing up below:
-      </p>
-      <div class="form-group">
-          <input type="email" class="form-control" name="email" placeholder="Email address" value="{{sessionFlash.email}}">
-      </div>
+          <button type="submit">Resend</button>
+        </form>
 
-      <button class="btn btn-secondary btn-block" type="submit">Resend</button>
-    </form>
-
+    </div>
 </div>
