Changed logged out comm/user message text

--- a/views/user.handlebars
+++ b/views/user.handlebars
@@ -21,7 +21,7 @@
     {{/and}}
     {{#unless loggedIn}}
     <div class="message w-100 text-center" style="font-size:1.4em;">
-      <strong>@{{ profileData.username }}</strong> is on <strong>sweet</strong>, a lightweight social network built on trust and community. <a class="alert-link" href="/signup">Sign up now</a>!
+      <strong>@{{ profileData.username }}</strong> is on <strong>sweet</strong>, a utopian social network. <a class="message-link" href="/signup">Join now</a>!
     </div>
     {{/unless}}
     {{#if loggedIn}}
