--- a/views/community.handlebars
+++ b/views/community.handlebars
@@ -11,7 +11,7 @@
       <div id="mainBody" class="community-container">
         {{#unless loggedIn}}
         <div class="message w-100 text-center" style="font-size:1.4em;">
-          <strong>{{ communityData.name }}</strong> is a community on <strong>sweet</strong>, a lightweight social network built on trust and community. <a class="message-link" href="/signup">Sign up now</a>!
+          <strong>{{ communityData.name }}</strong> is a community on <strong>sweet</strong>, a utopian social network. <a class="message-link" href="/signup">Join now</a>!
         </div>
         {{/unless}}
         {{> message }}
