Tiny change to community previews on logged out index

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -36,7 +36,7 @@
         </form>
 
         <form class="logged-out-form" action="/signup" method="post">
-            <p class="sidebar-text">Join sweet for ad-free, safer, democratically governed communites; queer- and trans-friendly spaces; adult-friendly content; and the Internet's best post editor.</p>
+            <p class="sidebar-text">Join sweet for ad-free, safer, democratically governed communites; queer- and trans-friendly spaces; flexible privacy settings; and the Internet's best post editor.</p>
 
             <div class="form-group">
                 <input type="text" name="email" placeholder="Email" {{#if sessionFlash.email}}value="{{ sessionFlash.email }}"{{/if}}>
