--- a/views/forgot-password.handlebars
+++ b/views/forgot-password.handlebars
@@ -9,7 +9,7 @@
                 <input type="text" name="email" placeholder="Email" value="{{sessionFlash.email}}">
                 <label for="email">Email</label>
             </div>
-            <button type="submit">Reset password</button>
+            <button class="button button-large button-full-width" type="submit">Reset password</button>
         </form>
 
     </div>
