--- a/views/signup.handlebars
+++ b/views/signup.handlebars
@@ -25,7 +25,7 @@
                 <label for="passwordrepeat">Repeat password</label>
             </div>
 
-            <button type="submit" >Sign up</button>
+            <button class="button button-large button-full-width" type="submit" >Sign up</button>
         </form>
 
 </div>
